[package]
name = "rustytracer"
version = "0.1.0"
edition = "2024"
authors = ["Aditya Mandal <mandaladitya1614@gmail.com>"]
description = "A high-performance ray tracer with multiple preset scenes"
license = "MIT"
repository = "https://github.com/Aditya-1304/raytracer"
keywords = ["raytracing", "graphics", "rendering", "3d"]
categories = ["graphics", "multimedia"]

[dependencies]
rand = "0.9.2"
rayon = "1.11.0"

[[bin]]
name = "raytracer"
path = "src/main.rs"


[profile.release]
debug = true
